--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
     "node": true
   },
   "extends": [
-    "prettier",
-    "plugin:node/recommended"
+    "eslint:recommended"
   ],
   "plugins": [
     "prettier"
