--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,8 @@
     "node": true
   },
   "extends": [
+    "prettier",
+    "plugin:node/recommended",
     "eslint:recommended"
   ],
   "plugins": [
